# scd41

./: .gitignore  CMakeLists.txt  README.md  plot_data.py
include/: i2c_hal.h  influx_logger.h  rpi_i2c_hal.h  scd41.h
src/: influx_logger.c  main.c  rpi_i2c_hal.c  scd41.c
tests/: scd41_test.cpp
